[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Enviroment/Keys/Yellow/YellowKey.png" type="Texture" id=1]
[ext_resource path="res://World/Enviroment/Keys/Red/RedKey.png" type="Texture" id=2]
[ext_resource path="res://World/Enviroment/Keys/Blue/BlueKey.png" type="Texture" id=3]
[ext_resource path="res://UI/PlayerKeys.gd" type="Script" id=4]

[node name="PlayerKeys" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.140308
margin_bottom = -0.140305
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 30.0
margin_bottom = 48.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YellowKey" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 30.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="BlueKey" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 30.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedKey" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 30.0
margin_bottom = 48.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
